# makesweet-py

./: README.md  makesweet-py.spec  pyproject.toml
src/: args.py  main.py
src/constants/: constants.py
src/logger/: logger.py
src/reader/: input.py  template.py
src/render/: pixer.py  render.py  renders.py
src/writer/: frames.py  gif.py
