[project]
name = "makesweet-py"
version = "0.2.3"
description = "Given an image, this library will make it sweet."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.4.6",
    "opencv-python-headless>=4.13.0.92",
    "pillow>=12.2.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.20.0",
]
